--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-easy-print": "^0.6.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
